--- a/ansible/roles/homegear/files/main.conf
+++ b/ansible/roles/homegear/files/main.conf
@@ -10,7 +10,7 @@
 debugLevel = 4
 
 # Default: memoryDebugging = false
-memoryDebugging = true
+memoryDebugging = false
 
 # Prints log information helping in fixing errors
 # Default: devLog = false
